--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="center">
-            <iframe src="https://panzoid.com" height="80%" width="100%" frameborder="0"></iframe>
+            <iframe src="https://blank.page" height="80%" width="100%" frameborder="0"></iframe>
         </div>
     </body>
 </html>
