--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="center">
-            <iframe src="updates.html" height="80%" width="100%" frameborder="0"></iframe>
+            <iframe frameborder="1" width="420" height="345" src="//www.youtube.com/embed/C8kSrkz8Hz8"></iframe>
         </div>
     </body>
 </html>
