--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
             <a href="updates.html"><button style="float: right; background-color: #426ba0;" class="btn">Update Logs</button></a>
         </div>
 
-        <iframe frameborder="1" width="420" height="345" src="//www.youtube.com/embed/C8kSrkz8Hz8"></iframe>
+        <iframe src="updates.html" frameborder="0"></iframe>
     </body>
 </html>
