--- a/404.html
+++ b/404.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Sorry</title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+        <link rel="stylesheet" href="Styles/formatstyles.css">
+        <title>Not Found</title>
     </head>
-    <Body>
-        <div class="alert">
-            <h1>Not Found</h1>
-            <b></b>
-            <h1>get better :P</h1>
+    <Body style="background-color: black">
+        <div class="center" style="color: white; font-size: large">
+            <h1>money under my pillow like i got a tooth FaIrY</h1>
         </div>
     </Body>
 </html>
