--- a/404.html
+++ b/404.html
@@ -1,13 +1,19 @@
-<!DOCTYPE html>
+g<!DOCTYPE html>
 <html>
     <head>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
         <link rel="stylesheet" href="Styles/formatstyles.css">
+        <link rel="stylesheet" href="Styles/buttonstyle.css">
         <title>Not Found</title>
     </head>
-    <Body style="background-color: black">
-        <div class="center" style="color: white; font-size: large">
-            <h1>money under my pillow like i got a tooth FaIrY</h1>
+    <Body class="gradient-move">
+        <div style="font-family:'Montserrat'; text-align: center; color: white; font-size: xx-large">
+            <h1>404 :(</h1>
+            <p>Sorry, No Page Found!</p>
+        </div>
+
+        <div style="display: flex; justify-content: center;">
+          <a href="javascript:history.back()"><button class="btn" style="border: 2px solid white; border-radius: 10px;"><img src="/Images/Chevron-left.png" height="30px" width="30px" style="float: left;">Go Back</button></a>
         </div>
     </Body>
 </html>
