--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <!--importing :)-->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
         <link rel="stylesheet" href="Styles/buttonstyle.css">
@@ -10,12 +11,12 @@
     </head>
     <body style="background-color:#1d1d1d">
         <div class="home">
-            <a href="https://scratch.mit.edu/users/ThatGreenCrystal"><button class="btn">My Scratch</button></a>
-            <a href="https:/youtube.com/c/ThatGreenCrystal"><button class="btn">My Youtube</button></a>
-            <a href="https://Panzoid.com/users/Yesnt_Nont"><button class="btn">My Panzoid</button></a>
+            <a href="https://scratch.mit.edu/users/ThatGreenCrystal" target="popup"><button class="btn">My Scratch</button></a>
+            <a href="https:/youtube.com/c/ThatGreenCrystal" target="popup"><button class="btn">My Youtube</button></a>
+            <a href="https://Panzoid.com/users/Yesnt_Nont" target="popup"><button class="btn">My Panzoid</button></a>
             <a href="updates.html"><button style="float: right; background-color: #426ba0;" class="btn">Update Logs</button></a>
         </div>
 
-        <iframe src="updates.html" frameborder="0"></iframe>
+        <iframe src="https://scratch.mit.edu" width="100%" height="500px"></iframe>
     </body>
 </html>
