--- a/updates.html
+++ b/updates.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <!--importing :)-->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
         <link rel="stylesheet" href="Styles/buttonstyle.css">
@@ -10,10 +11,13 @@
     </head>
     <body style="background-color:#1d1d1d">
         <div class="home">
-            <a href="https://scratch.mit.edu/users/ThatGreenCrystal"><button class="btn">My Scratch</button></a>
-            <a href="https:/youtube.com/c/ThatGreenCrystal"><button class="btn">My Youtube</button></a>
-            <a href="https://Panzoid.com/users/Yesnt_Nont"><button class="btn">My Panzoid</button></a>
-            <a href="updates.html"><button style="float: right; background-color: #426ba0;" class="btn">Update Logs</button></a>
+            <a href="https://scratch.mit.edu/users/ThatGreenCrystal" target="popup"><button class="btn">My Scratch</button></a>
+            <a href="https:/youtube.com/c/ThatGreenCrystal" target="popup"><button class="btn">My Youtube</button></a>
+            <a href="https://Panzoid.com/users/Yesnt_Nont" target="popup"><button class="btn">My Panzoid</button></a>
+            <a href="index.html"><button style="float: right; background-color: #426ba0;" class="btn">Home</button></a>
         </div>
+
+
+        <form action="newupdate.php" method="post"><button type="submit" class="btn" style="border: 2px solid white; border-radius: 10px; vertical-align: middle;"><img src="/Images/plus-icon.png" height="30px" width="30px" style="float: left; padding: 10px; filter: invert(100%);">Add New</button></form>
     </body>
 </html>
